tests/ui/lexer/lex-bad-char-literals-7.stderr
error: empty character literal
  --> $DIR/lex-bad-char-literals-7.rs:2:20
   |
LL |     let _: char = '';
   |                    ^ empty character literal

error: empty unicode escape
  --> $DIR/lex-bad-char-literals-7.rs:4:20
   |
LL |     let _: char = '\u{}';
   |                    ^^^^ this escape must have at least 1 hex digit

error: aborting due to 2 previous errors

